# RAMONYX-BE

./: .env.example  .env.test.example  .gitignore  .ruff.toml  DEVELOPMENT.md  README.md  README_DEV.md  README_PROD.md  alembic.ini  pyproject.toml
.github/workflows/: ci-cd.yml  dependency-updates.yml  dev-checks.yml
app/: __init__.py  database.py  main.py
app/cli/: __init__.py  bootstrap.py  install.py
app/core/: __init__.py  config.py  security.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  auth.py  base.py  enums.py  inventory.py  master_data.py  production.py  purchasing.py  sales.py
app/routers/: __init__.py  auth.py  inventory.py  production.py  products.py  purchasing.py  sales.py  users.py  warehouse.py
app/schemas/: __init__.py  auth.py  inventory.py  product.py  production.py  purchasing.py  sales.py  users.py  warehouse.py
app/services/: __init__.py  bootstrap.py  sample_data_seeder.py
migrations/: env.py
migrations/versions/: 2d64e6f050dc_initial_schema.py
scripts/: README.md
scripts/dev/: clean_db.py
scripts/prod/: backup_db.py  cleanup_old_data.py  health_check.py
tests/: conftest.py
