[project]
name = "ramonyxs-backend"
version = "1.0.0"
description = "Ramonyxs ERP Backend API with FastAPI and SQLAlchemy - Clean Migration with Database Triggers"
authors = [
    {name = "Rama Pamungkas", email = "me@r-dev.asia"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.30.0",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "bcrypt==4.0.1",
    "bandit>=1.9.3",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
]

[project.scripts]
erp-install = "app.cli.install:main"
erp-bootstrap = "app.cli.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["ALL"]
ignore = [
    "B008",  # FastAPI dependencies in function defaults
    "ANN201", # FastAPI routes with response_model
    "TC003", # typing-only standard library imports (non-critical)
    "DTZ003", # datetime.utcnow() in sample data (non-critical)
    "B904", # raise-without-from-inside-except (non-critical)
    "ANN204", # missing return type special method (non-critical)
    "C401", # unnecessary generator set (non-critical)
    "N811", # constant imported as non-constant (non-critical)
    "PTH120", # os.path.dirname (works fine)
    "S603", # subprocess without shell (production scripts)
    "S608", # hardcoded SQL expression (production scripts)
    "B007", # unused loop control variable (non-critical)
    "DTZ006", # datetime.fromtimestamp (production scripts)
    "N806", # non-lowercase variable (non-critical)
    "PT028", # pytest parameter with default (non-critical)
    "S104", # hardcoded bind all interfaces (non-critical)
    "S607", # start process with partial path (non-critical)
    "SIM108", # if-else block instead of if-exp (non-critical)
    "UP017", # datetime.UTC alias (non-critical)
    "I001", # import sorting (handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=23.12.1",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "testcontainers>=4.14.1",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20250531",
    "types-redis>=4.6.0.20241004",
]
